--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
   "name": "tessy",
-  "version": "1.0.1",
+  "version": "1.0.3",
   "description": "Advanced Web Monetization testing library with powerful declarative API.",
   "main": "src/index.js",
   "dependencies": {},
   "devDependencies": {
     "cypress": "^4.7.0",
-    "http-server": "^0.12.3",
     "jest": "^26.0.1",
     "parcel": "^1.12.4",
     "puppeteer": "^3.3.0",
@@ -18,7 +17,7 @@
   },
   "jest": {
     "testPathIgnorePatterns": [
-      "cypress"
+      "/cypress/"
     ]
   },
   "files": [
@@ -36,5 +35,10 @@
     "web monetization"
   ],
   "author": "Vladimir Mikulic <vladimir.mikulic2@gmail.com>",
+  "homepage": "https://github.com/VladimirMikulic/tessy#readme",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/VladimirMikulic/tessy"
+  },
   "license": "MIT"
 }
